syntax = "proto3";
package ev.v1.medical;
option csharp_namespace = "MedicalRecordServer";

import "google/protobuf/timestamp.proto";
import "common.proto";

service MedicalRecordService {
  rpc CreateRecord(CreateRecordRequest) returns (MedicalRecordResponse);
  rpc GetRecord(GetByIdRequest) returns (MedicalRecordResponse);
  rpc ListRecords(ListRecordsRequest) returns (ListRecordsResponse);
  // nếu cần: rpc AttachLabTest(AttachLabTestRequest) returns (MedicalRecordResponse);
}

message MedicalRecord {
  string id = 1;
  string patient_id = 2;
  string record_type = 3;
  string title = 4;
  string description = 5;
  string record_data = 6;
  string status = 7;
  string onset_date = 8; // DateOnly as "YYYY-MM-DD"
  string end_date = 9;   // DateOnly
  string created_by = 10;
  string verified_by = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
  repeated string lab_test_ids = 14;
}

message CreateRecordRequest {
  MedicalRecord record = 1;
}
message GetByIdRequest {
  string id = 1;
}
message MedicalRecordResponse {
  MedicalRecord record = 1;
  string error = 2; // optional error message
}
message ListRecordsRequest { string patient_id = 1; int32 page = 2; int32 page_size = 3; }
message ListRecordsResponse { repeated MedicalRecord records = 1; int32 total = 2; }